--- a/paginas/elixir.html
+++ b/paginas/elixir.html
@@ -32,5 +32,6 @@
       Despierta a los sabores del arándano y del hibisco 
       en este elixir rico en vitamina C.
     </p>
+	<a href="../index.html">Regresar a la pagina principal</a>
   </body>
 </html>
